postflight/apigee-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigee-alb-internal-svc
  namespace: apigee
spec:
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: apigee-ingressgateway
    ingress_name: nonprod-poc-1
    org: wealth-hybrid-poc-argo
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: apigee
  name: apigee-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: status-port
    external-dns.alpha.kubernetes.io/hostname: us-east-poc-nonprod-internal.754081525492.aws.env.site
spec:
  ingressClassName: alb
  rules:
  - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: apigee-alb-internal-svc
           port:
             name: http
